--- a/code/homepage.css
+++ b/code/homepage.css
@@ -1,20 +1,20 @@
 
 /*@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');*/
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-body,html{background:rgb(255, 255, 255); font-family:'Roboto', sans-serif; font-size:18px; font-weight:400; scroll-behavior: smooth; margin:0; padding:0;}
-a{color:black; text-decoration:none;}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+body,html{background:black; color:white; font-family:'Roboto', sans-serif; font-size:18px; font-weight:300; scroll-behavior: smooth; margin:0; padding:0;}
+a{color:white; text-decoration:none;}
 .hover{transition: 0.5s;}
 .hover:hover{background:#56575b;}
 
 #logo{width:30px; margin:25px; position:absolute; }
-#top{padding-top:29px; margin-left:65px; font-weight:700; }
+#top{padding-top:29px; margin-left:65px; font-weight:500; }
 
 #introtexte{width:35%; margin:17vh 0 0 10%; display:inline-block; }
 .titre{font-size:60px; font-size:4vw; font-weight:700; width: max-content;  animation: fadeinout 2.5s linear forwards;}
 @keyframes fadeinout {0% {opacity: 0;} 50% {opacity: 1;} 75% {opacity: 1;} 100% {opacity: 0;}}
 .soustitre{line-height: 155%; max-width:505px; margin-top:30px; }
-#btn{font-size:16px; font-weight:500; display:inline-block; margin-top:40px; padding:13px 20px; background:black; color:white; border-radius:12px;}
-#btn:hover{opacity:0.7;}
+#btn{font-size:16px; font-weight:500; display:inline-block; margin-top:40px; padding:13px 20px; background:rgb(20,20,20); border: solid 1px rgb(100,100,100); border-radius:12px;}
+#btn:hover{background:rgb(25,25,25);}
 
 #image{display:inline-block;vertical-align:top; position:absolute; left:55%; top:110px; top:16vh;  width:35%; /*animation: myfloat 3s; filter: drop-shadow(0px 0px 50px rgba(0,0,0,0.1));*/}
 /*@keyframes myfloat {0% {opacity:0;} 100% {opacity:1;}}*/
@@ -29,16 +29,15 @@ li{line-height: 155%; }
 #reassurance img{width:30px; vertical-align:middle; margin-right:15px; }
 
 #contacturl{padding-top:30px;}
-#contact{ position:relative; width:450px; margin:30px 0 60px 0;  padding:50px 50px 50px 60px; background:black; color:white; border-radius:25px; 
-background: black;
+#contact{ position:relative; width:450px; margin:30px 0 60px 0;  padding:50px 50px 50px 60px; background:rgb(20,20,20); border: solid 1px rgb(100,100,100); border-radius:25px; 
 /*background: linear-gradient(129.96deg, #FF2F2F 10.43%, #000460 92.78%), radial-gradient(100% 246.94% at 100% 0%, #FFFFFF 0%, #020063 100%), linear-gradient(58.72deg, #2200F2 0%, #530000 100%), linear-gradient(154.03deg, #B70000 0%, #FF003D 74.04%), linear-gradient(341.1deg, #FF0000 7.52%, #0038FF 77.98%), linear-gradient(136.23deg, #00C2FF 11.12%, #FF0000 86.47%), radial-gradient(57.37% 100% at 50% 0%, #B50000 0%, #0034BB 100%);
 background-blend-mode: overlay, color-burn, screen, overlay, difference, difference, normal;*/
 }
 #contact div{ margin:15px 0; }
 #contact img{width:30px; vertical-align:middle; margin-right:15px;}
 #contact .titre2{font-size:40px; padding:0; margin:0 0 40px 0;}
-#contact a {color:white;}
-/*#contact div:hover{opacity:0.7;}
+/*#contact a {color:black;}
+#contact div:hover{opacity:0.7;}
 #contact .titre2:hover{opacity:1;}*/
 
 #bottom{margin:100px 0 40px 10%; /*position:absolute;*/ font-size:16px;}
