--- a/code/homepage.css
+++ b/code/homepage.css
@@ -1,19 +1,23 @@
+:root {
+    --dark: rgb(25, 25, 27);
+    --grey: rgb(150, 150, 152);
+  }
 
 /*@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');*/
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-body,html{background:black; color:white; font-family:'Roboto', sans-serif; font-size:18px; font-weight:300; scroll-behavior: smooth; margin:0; padding:0;}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+body,html{background:var(--dark); color:white; font-family:'Roboto', sans-serif; font-size:18px; font-weight:400; scroll-behavior: smooth; margin:0; padding:0;}
 a{color:white; text-decoration:none;}
-.hover{transition: 0.5s;}
-.hover:hover{background:#56575b;}
+/*.hover{transition: 0.5s;}
+.hover:hover{background:#56575b;}*/
 
 #logo{width:30px; margin:25px; position:absolute; }
 #top{padding-top:29px; margin-left:65px; font-weight:500; }
 
 #introtexte{width:35%; margin:17vh 0 0 10%; display:inline-block; }
-.titre{font-size:60px; font-size:4vw; font-weight:700; width: max-content;  animation: fadeinout 2.5s linear forwards;}
+.titre{font-size:60px; font-size:4vw; font-weight:700; width: max-content;  animation: fadeinout 2.5s linear forwards; }
 @keyframes fadeinout {0% {opacity: 0;} 50% {opacity: 1;} 75% {opacity: 1;} 100% {opacity: 0;}}
-.soustitre{line-height: 155%; max-width:505px; margin-top:30px; }
-#btn{/*font-size:16px;*/ font-weight:500; display:inline-block; margin-top:40px; padding:13px 20px; background:rgb(20,20,20); border: solid 1px rgb(100,100,100); border-radius:12px;}
+.soustitre{line-height: 155%; max-width:505px; margin-top:30px; color: var(--grey); }
+#btn{ font-weight:900; display:inline-block; margin-top:40px; padding:13px 20px; background:white; color:var(--dark); /*border: solid 1px rgb(100,100,100);*/ border-radius:10px;}
 #btn:hover{background:rgb(25,25,25);}
 
 #image{display:inline-block;vertical-align:top; position:absolute; left:55%; top:110px; top:16vh;  width:35%; /*animation: myfloat 3s; filter: drop-shadow(0px 0px 50px rgba(0,0,0,0.1));*/}
@@ -21,26 +25,20 @@ a{color:white; text-decoration:none;}
 
 #corps{margin: 22vh 0 0 10%; width:700px; max-width:80%; /*margin-left:calc(50% - 350px);*/ }
 .titre2{font-size:28px; font-weight:700; margin-top:50px; padding:16px 0 0 0; line-height: 130%; }
-.texte{margin-top:20px; line-height: 155%; }
-li{line-height: 155%; }
+.texte{color: var(--grey); margin-top:20px; line-height: 155%; }
+li{line-height: 155%; color: var(--grey); }
 
-#reassurance{margin:80px 0 60px 50px; font-size:25px; font-weight:500;}
+#reassurance{margin:80px 0 60px 50px; font-size:25px; font-weight:500; }
 #reassurance div{ margin:20px 0; }
 #reassurance img{width:30px; vertical-align:middle; margin-right:15px; }
 
 #contacturl{padding-top:30px;}
-#contact{ position:relative; width:450px; margin:30px 0 60px 0;  padding:50px 50px 50px 60px; background:rgb(20,20,20); border: solid 1px rgb(100,100,100); border-radius:25px; 
-/*background: linear-gradient(129.96deg, #FF2F2F 10.43%, #000460 92.78%), radial-gradient(100% 246.94% at 100% 0%, #FFFFFF 0%, #020063 100%), linear-gradient(58.72deg, #2200F2 0%, #530000 100%), linear-gradient(154.03deg, #B70000 0%, #FF003D 74.04%), linear-gradient(341.1deg, #FF0000 7.52%, #0038FF 77.98%), linear-gradient(136.23deg, #00C2FF 11.12%, #FF0000 86.47%), radial-gradient(57.37% 100% at 50% 0%, #B50000 0%, #0034BB 100%);
-background-blend-mode: overlay, color-burn, screen, overlay, difference, difference, normal;*/
-}
+#contact{  position:relative; width:450px; margin:30px 0 60px 0;  padding:50px 50px 50px 60px; background:rgb(35, 35, 37); border: solid 1.5px rgb(60,60,62); border-radius:25px;}
 #contact div{ margin:15px 0; }
 #contact img{width:30px; vertical-align:middle; margin-right:15px;}
 #contact .titre2{font-size:40px; padding:0; margin:0 0 40px 0;}
-/*#contact a {color:black;}
-#contact div:hover{opacity:0.7;}
-#contact .titre2:hover{opacity:1;}*/
 
-#bottom{margin:100px 0 40px 10%; /*position:absolute;*/ font-size:16px;}
+#bottom{margin:100px 0 40px 10%; /*position:absolute;*/ font-size:16px; color:var(--grey);}
 
 @media screen and (max-width: 800px) { 
 #introtexte{width:86%;margin:12vh 0 0 7%; display:block; text-align:center;}
