--- a/code/homepage.css
+++ b/code/homepage.css
@@ -18,7 +18,7 @@ a{color:white; text-decoration:none;}
 @keyframes fadeinout {0% {opacity: 0;} 50% {opacity: 1;} 75% {opacity: 1;} 100% {opacity: 0;}}
 .soustitre{line-height: 155%; max-width:505px; margin-top:30px; color: var(--grey); }
 #btn{ font-weight:900; display:inline-block; margin-top:40px; padding:13px 20px; background:white; color:var(--dark); /*border: solid 1px rgb(100,100,100);*/ border-radius:10px;}
-#btn:hover{background:rgb(25,25,25);}
+#btn:hover{opacity:0.7;}
 
 #image{display:inline-block;vertical-align:top; position:absolute; left:55%; top:110px; top:16vh;  width:35%; /*animation: myfloat 3s; filter: drop-shadow(0px 0px 50px rgba(0,0,0,0.1));*/}
 /*@keyframes myfloat {0% {opacity:0;} 100% {opacity:1;}}*/
