--- a/code/homepage.css
+++ b/code/homepage.css
@@ -1,11 +1,15 @@
+/* root ------------------------------------------------- */
 :root {
     --dark: rgb(25, 25, 27);
+    --dark2: rgb(15, 15, 17);
     --grey: rgb(150, 150, 152);
   }
 
+/* reste ------------------------------------------------- */
+
 /*@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
-body,html{background:var(--dark); color:white; font-family:'Roboto', sans-serif; font-size:18px; font-weight:400; scroll-behavior: smooth; margin:0; padding:0;}
+body,html{ background: var(--dark) ; color:white; font-family:'Roboto', Helvetica, Arial, sans-serif; font-size:18px; font-weight:400; scroll-behavior: smooth; margin:0; padding:0;}
 a{color:white; text-decoration:none;}
 /*.hover{transition: 0.5s;}
 .hover:hover{background:#56575b;}*/
@@ -27,18 +31,19 @@ a{color:white; text-decoration:none;}
 .titre2{font-size:28px; font-weight:700; margin-top:50px; padding:16px 0 0 0; line-height: 130%; }
 .texte{color: var(--grey); margin-top:20px; line-height: 155%; }
 li{line-height: 155%; color: var(--grey); }
+ul li b{color:white;}
 
 #reassurance{margin:80px 0 60px 50px; font-size:25px; font-weight:500; }
 #reassurance div{ margin:20px 0; }
 #reassurance img{width:30px; vertical-align:middle; margin-right:15px; }
 
 #contacturl{padding-top:30px;}
-#contact{  position:relative; width:450px; margin:30px 0 60px 0;  padding:50px 50px 50px 60px; background:rgb(35, 35, 37); border: solid 1.5px rgb(60,60,62); border-radius:25px;}
+#contact{  position:relative; width:450px; margin:30px 0 60px 0;  padding:50px 50px 50px 60px; background:var(--dark); border: solid 1px rgb(60,60,62); border-radius:25px;}
 #contact div{ margin:15px 0; }
 #contact img{width:30px; vertical-align:middle; margin-right:15px;}
 #contact .titre2{font-size:40px; padding:0; margin:0 0 40px 0;}
 
-#bottom{margin:100px 0 40px 10%; /*position:absolute;*/ font-size:16px; color:var(--grey);}
+#bottom{padding:100px 0 40px 10%; /*position:absolute;*/ font-size:16px; color:var(--grey);}
 
 @media screen and (max-width: 800px) { 
 #introtexte{width:86%;margin:12vh 0 0 7%; display:block; text-align:center;}
@@ -52,5 +57,21 @@ li{line-height: 155%; color: var(--grey); }
 #reassurance{margin-left:0%; font-size:21px;}
 #contact{padding:11% 11% 9% 11%;width:78%; display:block;}
 #contact .titre2{font-size:30px;}
-#bottom{margin-left:7%;margin-top:55px;width:86%;text-align:center;}
+#bottom{padding-left:7%;padding-top:55px;width:86%;text-align:center;}
+}
+
+
+/* dégradé ---------------------------------------------- */
+
+html {
+  min-height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+body {
+  min-height: 100%;
+  margin: 0;
+  background: linear-gradient(to bottom, var(--dark), var(--dark2));
 }
