--- a/code/homepage.css
+++ b/code/homepage.css
@@ -18,7 +18,7 @@ a{color:white; text-decoration:none;}
 #top{padding-top:29px; margin-left:65px; font-weight:700; }
 
 #introtexte{width:35%; margin:17vh 0 0 10%; display:inline-block; }
-.titre{font-size:60px; font-size:4vw; font-weight:700; width: max-content;  animation: fadeinout 2.5s linear forwards; }
+.titre{display:none; font-size:60px; font-size:4vw; font-weight:700; width: max-content;  animation: fadeinout 2.5s linear forwards; }
 @keyframes fadeinout {0% {opacity: 0;} 50% {opacity: 1;} 75% {opacity: 1;} 100% {opacity: 0;}}
 .soustitre{line-height: 155%; max-width:505px; margin-top:30px; color: var(--grey); }
 #btn{ font-weight:900; display:inline-block; margin-top:40px; padding:13px 20px; background:white; color:var(--dark); /*border: solid 1px rgb(100,100,100);*/ border-radius:10px;}
@@ -61,7 +61,7 @@ ul li b{color:white;}
 }
 
 
-/* dégradé ---------------------------------------------- */
+/* background dégradé ------------------------------------------ */
 
 html {
   min-height: 100%;
