--- a/code/homepage.css
+++ b/code/homepage.css
@@ -11,8 +11,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 body,html{ background: var(--dark) ; color:white; font-family:'Roboto', Helvetica, Arial, sans-serif; font-size:18px; font-weight:400; scroll-behavior: smooth; margin:0; padding:0;}
 a{color:white; text-decoration:none;}
-/*.hover{transition: 0.5s;}
-.hover:hover{background:#56575b;}*/
 
 #logo{width:30px; margin:25px; position:absolute; }
 #top{padding-top:29px; margin-left:65px; font-weight:700; }
@@ -20,12 +18,12 @@ a{color:white; text-decoration:none;}
 #introtexte{width:35%; margin:17vh 0 0 10%; display:inline-block; }
 .titre{display:none; font-size:60px; font-size:4vw; font-weight:700; width: max-content;  animation: fadeinout 2.5s linear forwards; }
 @keyframes fadeinout {0% {opacity: 0;} 50% {opacity: 1;} 75% {opacity: 1;} 100% {opacity: 0;}}
+.titre:first-of-type {display: block;}
 .soustitre{line-height: 155%; max-width:505px; margin-top:30px; color: var(--grey); }
-#btn{ font-weight:900; display:inline-block; margin-top:40px; padding:13px 20px; background:white; color:var(--dark); /*border: solid 1px rgb(100,100,100);*/ border-radius:10px;}
+#btn{ font-weight:900; display:inline-block; margin-top:40px; padding:13px 20px; background:white; color:var(--dark); border-radius:10px;}
 #btn:hover{opacity:0.7;}
 
-#image{display:inline-block;vertical-align:top; position:absolute; left:55%; top:110px; top:16vh;  width:35%; /*animation: myfloat 3s; filter: drop-shadow(0px 0px 50px rgba(0,0,0,0.1));*/}
-/*@keyframes myfloat {0% {opacity:0;} 100% {opacity:1;}}*/
+#image{display:inline-block;vertical-align:top; position:absolute; left:55%; top:110px; top:16vh;  width:35%; }
 
 #corps{margin: 22vh 0 0 10%; width:700px; max-width:80%; /*margin-left:calc(50% - 350px);*/ }
 .titre2{font-size:28px; font-weight:700; margin-top:50px; padding:16px 0 0 0; line-height: 130%; }
@@ -43,7 +41,7 @@ ul li b{color:white;}
 #contact img{width:30px; vertical-align:middle; margin-right:15px;}
 #contact .titre2{font-size:40px; padding:0; margin:0 0 40px 0;}
 
-#bottom{padding:100px 0 40px 10%; /*position:absolute;*/ font-size:16px; color:var(--grey);}
+#bottom{padding:100px 0 40px 10%; font-size:16px; color:var(--grey);}
 
 @media screen and (max-width: 800px) { 
 #introtexte{width:86%;margin:12vh 0 0 7%; display:block; text-align:center;}
@@ -51,7 +49,7 @@ ul li b{color:white;}
 .soustitre,#btn{margin-top:10%;}
 .soustitre{max-width:none;}
 #introimage{display:block; margin-top:50px; margin-bottom:50px;}
-#image{position:static; width:80%; margin:7% 0 0 10%; /*filter: drop-shadow(0px 0px 10px rgba(0,0,0,0.1));*/}
+#image{position:static; width:80%; margin:7% 0 0 10%;}
 #corps{width:86%;margin:0 0 0 7%; max-width:86%;}
 .titre2{font-size:25px;margin-top:7%;}
 #reassurance{margin-left:0%; font-size:21px;}
