--- a/code/homepage.css
+++ b/code/homepage.css
@@ -37,7 +37,7 @@ ul li b{color:white;}
 #reassurance img{width:30px; vertical-align:middle; margin-right:15px; }
 
 #contacturl{padding-top:30px;}
-#contact{  position:relative; width:450px; margin:30px 0 60px 0;  padding:50px 50px 50px 60px; background:var(--dark); border: solid 1px rgb(60,60,62); border-radius:25px;}
+#contact{  position:relative; display: inline-block; margin:30px 0 60px 0;  padding:50px 150px 50px 60px; background:var(--dark); border: solid 1px rgb(60,60,62); border-radius:25px;}
 #contact div{ margin:15px 0; }
 #contact img{width:30px; vertical-align:middle; margin-right:15px;}
 #contact .titre2{font-size:40px; padding:0; margin:0 0 40px 0;}
