--- a/code/homepage.css
+++ b/code/homepage.css
@@ -49,7 +49,7 @@ ul li b{color:white;}
 #form input, #form textarea{font-family:'Roboto', Helvetica, Arial, sans-serif; font-size:18px; font-weight:400; padding:15px; margin:0 10px 10px 0; border-radius:12px; border:0;}
 #form .nom, #form .prenom, #form .telephone, #form .email {width:320px;}
 #form .message {width:680px; height:200px; }
-#form #feedback {margin-top:20px; }
+#form #feedback {width:700px; margin-top:20px; line-height: 155%;}
 #form .button{font-weight:700; padding:13px 20px; border-radius:12px; background:white; color: var(--dark); cursor:pointer; }
 
 /* bottom ------------------------------------------------ */
@@ -69,9 +69,10 @@ ul li b{color:white;}
 #contact{padding:7%;}
 #contact .titre2{font-size:35px;}
 #form{  padding: 0 0 50px 7%;    }
-#form input, #form textarea{padding:15px; margin:0 0 10px 0; }
+#form input, #form textarea{margin:0 0 10px 0; }
 #form .nom, #form .prenom, #form .telephone, #form .email {width:86%;}
 #form .message {width:86%; height:200px; }
+#form #feedback {width:86%; }
 #bottom{padding-left:7%;padding-top:55px;width:86%;text-align:center;}
 }
 
