--- a/code/homepage.css
+++ b/code/homepage.css
@@ -66,7 +66,7 @@ ul li b{color:white;}
 #corps{width:86%;margin:0 0 0 7%; max-width:86%;}
 .titre2{font-size:25px;margin-top:7%;}
 #reassurance{margin-left:0%; font-size:21px;}
-#contact{padding:7%;}
+#contact{padding:50px 7%;}
 #contact .titre2{font-size:35px;}
 #form{  padding: 0 0 50px 7%;    }
 #form input, #form textarea{margin:0 0 10px 0; }
