--- a/code/style.css
+++ b/code/style.css
@@ -109,7 +109,7 @@ select {cursor:pointer;}
 #siteweb .bloc.six .btn {background:rgb(236, 195, 159); color:black; }
 
 @media screen and (max-width: 700px) { 
-#siteweb .grandtitre {width:80%; font-size:40px; margin:40px auto; }
+#siteweb .grandtitre {width:80%; font-size:40px; margin:60px auto 40px auto; }
 #siteweb .bloc {width:90%;}
 }
 
@@ -120,7 +120,7 @@ select {cursor:pointer;}
 #dev #image{ position:absolute; top:0; right:0; width:480px; display:inline-block; vertical-align:top; }
 
 @media screen and (max-width: 1200px) { 
-  #dev {width:80%; text-align:center; padding:0 10%; margin:40px auto 0 auto;}
+  #dev {width:80%; text-align:center; padding:0 10%; margin:60px auto 0 auto;}
   #dev .grandtitre{width:100%; font-size:40px; }
   #dev .soustitre{width:100%;  }
  #dev #image{ display:block; width:50%; clear:both; position:relative; margin-top:60px; margin-left:auto; margin-right:auto; }
