--- a/code/style.css
+++ b/code/style.css
@@ -49,8 +49,8 @@ select {cursor:pointer;}
 #menumobile #logo {height:25px; position:fixed; top:10px; left:20px;}
 #menumobile #open {height:25px; position:fixed; top:10px; right:20px; }
 
-#sousmenumobile {display:none; position:fixed; background:black; top:0; left:0; z-index:3; padding:40px 40px; text-align:left; width:100%; height:100vh; overflow: hidden;}
-#sousmenumobile div {padding:20px 0; font-size:30px;  color:white; line-height:110%;}
+#sousmenumobile {display:none; position:fixed; background:black; top:0; left:0; z-index:3; text-align:left; width:100%; height:100vh; overflow: hidden; padding:40px 0;}
+#sousmenumobile div {margin:40px; font-size:30px;  color:white; line-height:110%;}
 #sousmenumobile #close {position:fixed; top:10px; right:20px; height:25px; }
 
 @media screen and (max-width: 600px) { 
@@ -205,6 +205,7 @@ select {cursor:pointer;}
 
 @media screen and (max-width: 850px) { 
 #contact {width:100%;}
+#contact .grandtitre {width:80%; font-size:40px; margin:80px auto 40px auto; }
 #form input, #form textarea {  width:90% !important; }
 #contact .feedback {  width:83%; }
 #form .message {width:90%; height:200px; }
